--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
+.search-box{
+  /* display: flex; */
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
 .head-line{
   display: flex;
   justify-content: center;
   margin-top: 1em;
+  font-family: 'Tapestry', cursive;
+  font-size: 50px;
+  font-weight: 900;
 }
 .head-line svg{
   width: 450px;
@@ -11,8 +19,12 @@
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 1em;
+  margin-bottom: 15px;
   border-top: 1px solid gray;
   border-bottom: 4px double black;
+  /* font-family: 'Oleo Script Swash Caps', cursive; */
+  font-family: 'Tapestry', cursive;
+  font-weight: bolder;
 }
 .menus button{
   border: none;
@@ -29,4 +41,9 @@
 }
 .news{
   border-bottom: 2px solid black;
+  margin-top: 1em;
+  font-family: 'Noto Sans KR', sans-serif;
+}
+nav li{
+  margin-top: 15px;
 }
